[package]
name = "tea-blower"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.5.0", features = ["defmt", "arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "time-driver", "unstable-pac", "critical-section-impl"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb-logger = "0.1.0"
fixed = "1.27.0"
fixed-macro = "1.2.0"
log = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"
smart-leds = "0.4.0"
